# telegram-bot-template

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/application/: base.py
app/application/mailing/: create.py  delete_metadata.py  get_by_id.py  get_metadata_by_id.py  save_metadata.py  update.py
app/application/users/: create_user.py  get_all_users.py  get_user_by_id.py  get_user_by_tg_id.py
app/common/: logging.py
app/core/: enums.py  types.py
app/core/dtos/: __init__.py  mailing.py  user.py
app/core/exceptions/: base.py  mailing.py  users.py
app/infrastructure/config/: __init__.py  models.py  parsers.py
app/infrastructure/db/: uow.py
app/infrastructure/db/migration/: env.py
app/infrastructure/db/migration/versions/: c258fa29f42f_init.py  fdac1dae4f48_added_mailings_table.py
app/infrastructure/db/models/: __init__.py  mailing.py  user.py
app/infrastructure/db/repository/: __init__.py  mailings.py  users.py
app/infrastructure/di/: __init__.py  bot.py  config.py  db.py  fast_stream.py  interactors.py  repository.py  utils.py
app/infrastructure/utils/: broker.py
app/main/: bot.py  stream.py
app/presentation/stream/consumers/: mailings.py
app/presentation/stream/consumers/mailing/: __init__.py  create.py  send_notification.py
app/presentation/tg_bot/: states.py
app/presentation/tg_bot/dialogs/: __init__.py
app/presentation/tg_bot/handlers/: __init__.py  commands.py  start.py
app/presentation/tg_bot/middlewares/: __init__.py  load.py
nats/: migration.py
(+3 files in other folders)
