[project]
name = "telegram-bot-template"
version = "0.1.0"
authors = [
    { name = "ZoRex" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.17.0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "dishka>=1.4.2",
    "environs>=14.1.0",
    "faststream[nats]>=0.5.34",
    "sqlalchemy>=2.0.37",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
bot = "app.main.bot:main"
stream = "app.main.stream:main"
